deixando o site responsivo

--- a/04 - Landing page/assets/style.css
+++ b/04 - Landing page/assets/style.css
@@ -14,19 +14,22 @@
 .fundo_secao {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 50px;
 }
 
 .cabecalho {
     display: flex;
     align-items: center;
     justify-content:center;
-    height: 15vh;
+    height: 10vh;
+    background-color: #165cce;
 }
 
 .cabecalho a {
     text-decoration: none;
-    color: #9d9d9d;
+    color: white;
     font-size: 20px;
+
 }
 
 .cabecalho a:hover {
@@ -42,16 +45,10 @@
     font-weight: 600;
 }
 
-
-.texto_descricao .logo {
-    display: flex;
-    flex-direction: column;
-}
-
 .esquerda {
     display: flex;
-    width: 230px;
-    margin: -80px;
+    width: 300px;
+    margin: 10px;
 }
 
 .titulo_descricao {
@@ -91,4 +88,81 @@
 
 .direita img {
     height: 60vh;
+}
+.footer_copy {
+    margin-top: 10vh;
+}
+.footer_copy h2 {
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    height: 10vh;
+    background-color: #165cce;
+    flex-direction: column;
+}
+.footer_copy a {
+    text-decoration: none;
+    color: #000;
+}
+
+@media (max-width:400px) {
+    
+    .cabecalho {
+        display: flex;
+        justify-content: center;
+        width: 50px;
+}
+
+    .footer_copy {
+        width: 400px;
+    }
+}
+
+@media (max-width:430px) {
+    .botao h2 a {
+        font-size: 15px;
+    }
+    .cabecalho {
+        display: flex;
+        justify-content: center;
+}
+}
+@media (max-width:500px) {
+    .footer_copy h2 {
+        font-size: 15px;
+
+    }
+}
+
+@media (max-width:1150px) {
+    .direita {
+        display: none;
+        
+    }
+    body {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .cabecalho {
+        height: 35vh;
+        width: 100vw;
+        margin-bottom: -70px;
+    }
+    .menu {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px;
+        width: 400px;
+    }
+    .menu a {
+        text-align: center;
+        padding: 17px;
+    }
+    .esquerda {
+        width: 30vw;
+        margin-left: 0vw;
+    }       
 }
